# Picaton

./: .env.example  .gitignore  README.md  docker-compose.yaml  index.html  nginx.conf  test_search.py
backend/: Dockerfile  pyproject.toml  telegram_bot.py
backend/application/services/: __init__.py  ai_bio.py  ai_prd_generator.py  ai_search.py  ai_tags.py  ai_team_matching.py  auth.py  business_card.py  card_title.py  chat.py  company.py  company_card.py  company_role.py  contact_import.py  contact_sync.py  direct_chat.py  document_transcriber.py  email_verification.py  gamification.py  gigachat_bio.py  gigachat_query_classifier.py  gigachat_tags.py  gigachat_task_decomposer.py  gigachat_text_tags.py  groq_bio.py  groq_query_classifier.py  groq_tags.py  groq_task_decomposer.py  groq_text_tags.py  idea.py  llm_bio.py  local_bio.py  local_tags.py  magic_link.py  notification.py  permission_checker.py  privacy_checker.py  project.py  qrcode.py  saved_contact.py  (+6 more)
backend/application/tasks/: __init__.py  email_tasks.py
backend/domain/entities/: __init__.py  base.py  business_card.py  chat_message.py  company.py  company_card.py  company_role.py  company_settings.py  conversation.py  department.py  gamification.py  idea.py  idea_comment.py  idea_swipe.py  notification.py  position.py  project.py  project_member.py  saved_contact.py  share_link.py  skill_endorsement.py  tag.py  user.py
backend/domain/enums/: __init__.py  company.py  contact.py  idea.py  permission.py  privacy.py  project.py  status.py
backend/domain/exceptions/: __init__.py  base.py  contact.py  employee.py  user.py
backend/domain/repositories/: __init__.py  business_card.py  chat_message.py  company.py  company_card.py  company_role.py  company_tag_settings.py  conversation.py  direct_message.py  email_verification.py  gamification.py  idea.py  idea_comment.py  idea_swipe.py  notification.py  pending_hash.py  project.py  project_member.py  saved_contact.py  share_link.py  skill_endorsement.py  user.py
backend/domain/values/: contact.py  email.py
backend/infrastructure/: dependencies.py  encryption.py
backend/infrastructure/broker/: broker.py
backend/infrastructure/database/: client.py
backend/infrastructure/email/: __init__.py  smtp_email.py
backend/infrastructure/llm/: __init__.py  (+5 more)
backend/settings/: config.py
mcp/: .env.example  Dockerfile  client.py  config.py  pyproject.toml  server.py
mcp/tools/: __init__.py  cards.py  profiles.py  search.py
(+359 files in other folders)
