[tool.poetry]
package-mode=false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.123.10"
bcrypt = "^5.0.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.12.0"
uvicorn = "^0.38.0"
taskiq = "^0.12.1"
taskiq-redis = "^1.1.2"
taskiq-fastapi = "^0.4.0"
redis = "6.4.0"
alembic = "^1.17.2"
motor = "^3.7.1"
qrcode = {extras = ["pil"], version = "^8.0"}
pillow = "^11.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
onnxruntime = "^1.20.0"
tokenizers = "^0.21.0"
httpx = "^0.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-httpx = "^0.36.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


