[tool.poetry]
package-mode=false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.123.10"
bcrypt = "^5.0.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.12.0"
uvicorn = "^0.38.0"
taskiq = "^0.12.1"
taskiq-redis = "^1.1.2"
taskiq-aio-pika = "^0.4.1"
taskiq-fastapi = "^0.4.0"
redis = "6.4.0"
motor = "^3.7.1"
qrcode = {extras = ["pil"], version = "^8.0"}
pillow = "^11.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
onnxruntime = "^1.20.0"
tokenizers = "^0.21.0"
httpx = "^0.28.0"
cloudinary = "^1.41.0"
python-multipart = "^0.0.20"
websockets = "^15.0.1"
gigachat = "^0.1.43"
python-docx = "^1.1.0"
PyPDF2 = "^3.0.1"
striprtf = "^0.0.26"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-httpx = "^0.36.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


